<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/computer_identifying_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme"
        android:title="@string/title_computer_identifying"
        android:titleTextColor="@android:color/white"
        app:navigationIcon="?android:attr/actionModeCloseDrawable">
        <TextView
            android:text="@string/title_computer_identifying"
            android:textAppearance="@android:style/TextAppearance.Theme"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_computer_identifying"
        />

    <LinearLayout
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/computador_str"
            android:src="@drawable/pc_case" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:contentDescription="@string/monitor_str"
            android:src="@drawable/monitor" />
    </LinearLayout>

    <EditText
        android:id="@+id/computer_reference_txt"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/roboto"
        android:hint="@string/computer_code_input"
        android:singleLine="true"
        android:textSize="16sp" />

    <Button
        android:onClick="identifyDevice"
        android:layout_marginTop="3dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@android:style/Widget.Material.Button"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/ready"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>