<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/complementary_information_screen_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme"
        android:title="@string/title_complementary_information_screen"
        android:titleTextColor="@android:color/white"
        app:navigationIcon="?android:attr/actionModeCloseDrawable">
        <TextView
            android:text="@string/title_complementary_information_screen"
            android:textAppearance="@android:style/TextAppearance.Theme"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complementary_information_screen_description"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterMaxLength="140"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:counterEnabled="true">
        <EditText
            android:id="@+id/complementary_information_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:maxLength="140"
            android:textColor="@android:color/black"
            android:inputType="textMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@android:style/Widget.Material.Button"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:text="@string/ready"
        android:onClick="submitDetailedInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>